// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VanillaColor overview 1`] = `
<DocumentFragment>
  <div
    class="css-1m19f2s-VanillaColor"
  >
    <div
      class="css-1t5r9du-VanillaColor"
      style="display: inline-block;"
    />
    <div
      class="css-g6l6bb-VanillaColor"
    >
      <div>
        $color-negative
      </div>
      <div>
        #C7162B
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VanillaColor palette 1`] = `
<DocumentFragment>
  <div
    class="css-1gy5qwa"
  >
    <div
      class="css-1m19f2s-VanillaColor"
    >
      <div
        class="css-1gxpwzz-VanillaColor"
        style="display: inline-block;"
      />
      <div
        class="css-g6l6bb-VanillaColor"
      >
        <div>
          $color-x-light
        </div>
        <div>
          #FFF
        </div>
      </div>
    </div>
    <div
      class="css-1m19f2s-VanillaColor"
    >
      <div
        class="css-1so1hks-VanillaColor"
        style="display: inline-block;"
      />
      <div
        class="css-g6l6bb-VanillaColor"
      >
        <div>
          $color-brand
        </div>
        <div>
          #333
        </div>
      </div>
    </div>
    <div
      class="css-1m19f2s-VanillaColor"
    >
      <div
        class="css-1a5myma-VanillaColor"
        style="display: inline-block;"
      />
      <div
        class="css-g6l6bb-VanillaColor"
      >
        <div>
          $color-caution
        </div>
        <div>
          #F99B11
        </div>
      </div>
    </div>
    <div
      class="css-1m19f2s-VanillaColor"
    >
      <div
        class="css-1t5r9du-VanillaColor"
        style="display: inline-block;"
      />
      <div
        class="css-g6l6bb-VanillaColor"
      >
        <div>
          $color-negative
        </div>
        <div>
          #C7162B
        </div>
      </div>
    </div>
    <div
      class="css-1m19f2s-VanillaColor"
    >
      <div
        class="css-a50c0n-VanillaColor"
        style="display: inline-block;"
      />
      <div
        class="css-g6l6bb-VanillaColor"
      >
        <div>
          $color-positive
        </div>
        <div>
          #0E8420
        </div>
      </div>
    </div>
    <div
      class="css-1m19f2s-VanillaColor"
    >
      <div
        class="css-1j6lmlp-VanillaColor"
        style="display: inline-block;"
      />
      <div
        class="css-g6l6bb-VanillaColor"
      >
        <div>
          $color-information
        </div>
        <div>
          #06C
        </div>
      </div>
    </div>
    <div
      class="css-1m19f2s-VanillaColor"
    >
      <div
        class="css-1gxpwzz-VanillaColor"
        style="display: inline-block;"
      />
      <div
        class="css-g6l6bb-VanillaColor"
      >
        <div>
          $color-navigation-background
        </div>
        <div>
          #FFF
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
